# ci-doctor

./: .gitignore  GITHUB_TOKEN_SETUP.md  LICENSE  Makefile  README.md  instructions.md  pyproject.toml
.github/workflows/: release.yml
src/ci_doctor/: ai_analysis.py  analysis.py  cli.py  render.py  utils.py
src/ci_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ci_doctor/providers/: base.py  github_api.py  github_provider.py
tests/: test_url_parse.py  test_utils.py
